# histo-omics-lite

./: CHANGELOG.md  CONTRIBUTING.md  DATASET_SHEET.md  Dockerfile.cpu  LICENSE  MANIFEST.in  MODEL_CARD.md  Makefile  README.md  RELEASE_NOTES.md  coverage.xml  mkdocs.yml  pyproject.toml
artifacts/: metrics.json
configs/: config.yaml
configs/train/: cpu_small.yaml  fast_debug.yaml  gpu_quick.yaml
data/public/: manifest.json
data/public/clinical/: labels.csv
data/public/omics/: expression_matrix.csv
data/synthetic/: labels.csv
docs/: api.md  concepts.md  determinism.md  index.md  quickstart.md
docs/development/: benchmarks.md
histo-omics-lite/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml
histo-omics-lite/configs/: config.yaml
histo-omics-lite/configs/data/: default.yaml  fast_debug.yaml  synthetic.yaml
histo-omics-lite/configs/eval/: base.yaml
histo-omics-lite/configs/model/: alignment_net.yaml  default.yaml
histo-omics-lite/configs/train/: base.yaml  cpu_small.yaml  default.yaml  fast_debug.yaml
histo-omics-lite/docker/: Dockerfile.cpu  Dockerfile.cuda
histo-omics-lite/docs/advanced/: determinism.md
histo-omics-lite/docs/getting-started/: quickstart.md
histo-omics-lite/notebooks/: embedding_diagnostics.ipynb  quickstart_inference.ipynb
histo-omics-lite/src/histo_omics_lite/: __init__.py  cli.py  py.typed
histo-omics-lite/src/histo_omics_lite/data/: datamodule.py  datasets.py  shard_maker.py  synthetic.py  transforms.py  utils.py
histo-omics-lite/src/histo_omics_lite/evaluation/: __init__.py  evaluate.py  evaluator.py  metrics.py
histo-omics-lite/src/histo_omics_lite/inference/: cli.py
histo-omics-lite/src/histo_omics_lite/models/: losses.py  multimodal.py  simclr.py
histo-omics-lite/src/histo_omics_lite/training/: train.py
histo-omics-lite/src/histo_omics_lite/utils/: __init__.py  determinism.py
histo-omics-lite/tests/: __init__.py  test_datamodule.py  test_e2e.py  test_losses.py  test_model.py
histo-omics-lite/tests/integration/: test_cli.py
histo-omics-lite/tests/unit/: test_determinism.py  test_package.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_09e6be61bb4d116f___init___py.html  z_09e6be61bb4d116f_determinism_py.html  z_6064dddd562cff25___init___py.html  z_6064dddd562cff25_embeddings_py.html  z_6332051338243cc0___init___py.html  z_6332051338243cc0_simple_fusion_py.html  z_6af32a02a266849c___init___py.html  z_6af32a02a266849c_trainer_py.html  z_8c7f7e1a44fad307___init___py.html  z_8c7f7e1a44fad307_evaluator_py.html  z_8c7f7e1a44fad307_metrics_py.html  z_8d433184b26fa6ba___init___py.html  z_8d433184b26fa6ba_cli_py.html  z_b525856b05063f53___init___py.html  z_b525856b05063f53_synthetic_py.html
scripts/: fetch_public_data.py  fetch_public_demo.py  run_end_to_end.py  smoke_test.py  validate_smoke_results.py
src/histo_omics_lite/: __init__.py  cli.py
src/histo_omics_lite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/histo_omics_lite/config/: __init__.py  schemas.py
src/histo_omics_lite/data/: __init__.py  loader.py  synthetic.py
src/histo_omics_lite/data/adapters/: __init__.py  public_demo.py
src/histo_omics_lite/evaluation/: __init__.py  bootstrap.py  calibration.py  evaluator.py  metrics.py  retrieval.py
src/histo_omics_lite/inference/: __init__.py  cli.py  embeddings.py
src/histo_omics_lite/models/: __init__.py  clip.py  fusion_early.py  fusion_late.py  image_linear_probe.py  omics.py  omics_mlp.py  simple_fusion.py  vision.py
src/histo_omics_lite/report/: __init__.py  make_report.py
src/histo_omics_lite/report/templates/: index.html.jinja
src/histo_omics_lite/tracking/: __init__.py  mlflow_logger.py
src/histo_omics_lite/training/: __init__.py  train.py  trainer.py
src/histo_omics_lite/utils/: __init__.py  determinism.py
src/histo_omics_lite/visualization/: __init__.py  gradcam.py  umap.py
tests/: conftest.py  test_cli_smoke.py  test_determinism.py  test_embeddings_golden.py  test_losses.py  test_metrics_ci.py  test_public_pipeline.py  test_schemas.py  test_smoke.py
tests/benchmarks/: __init__.py  test_data_generation.py  test_model_performance.py
tests/integration/: test_cli.py
tests/unit/: test_data_synthetic.py  test_determinism.py  test_evaluation_metrics.py  test_training_workflow.py
