[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "histo-omics-lite"
version = "0.1.0"
description = "Lightweight histology×omics alignment with a tiny, CPU-only pipeline"
readme = "README.md"
authors = [{ name = "Altalanta", email = "engineering@altalanta.ai" }]
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  "torch>=2.1,<2.3",
  "torchvision>=0.16,<0.19",
  "lightning>=2.2,<3.0",
  "numpy>=1.24,<2.0",
  "pandas>=1.5,<3.0",
  "typer>=0.9.0",
  "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/altalanta/histo-omics-lite"
Issues = "https://github.com/altalanta/histo-omics-lite/issues"

[project.optional-dependencies]
cpu = [
  "hydra-core>=1.3,<1.4",
  "pydantic>=2.0,<3.0",
  "scikit-learn>=1.3,<2.0",
  "matplotlib>=3.5,<4.0",
  "pillow>=9.0,<11.0",
  "mlflow>=2.8,<3.0",
  "jinja2>=3.1,<4.0",
  "umap-learn>=0.5,<1.0"
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "mypy>=1.8",
  "ruff>=0.1.14",
  "pre-commit>=3.6",
  "build>=1.0",
  "mkdocs>=1.5",
  "mkdocs-material>=9.4",
  "mkdocstrings[python]>=0.24",
  "hydra-core>=1.3,<1.4",
  "pydantic>=2.0,<3.0",
  "pydantic-settings>=2.0",
  "scikit-learn>=1.3,<2.0",
  "matplotlib>=3.5,<4.0",
  "pillow>=9.0,<11.0",
  "mlflow>=2.8,<3.0",
  "jinja2>=3.1,<4.0",
  "umap-learn>=0.5,<1.0"
]

[project.scripts]
histo-omics-lite = "histo_omics_lite.cli:app"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "PL", "UP", "B", "A", "C4"]
ignore = ["E501", "PLR2004", "PLR0913", "N812"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=histo_omics_lite --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["histo_omics_lite"]
parallel = false
omit = []

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
strict = true
packages = ["histo_omics_lite"]
